add dark-reader exception; prefer custom dark theme for svgs;

--- a/src/colors.css
+++ b/src/colors.css
@@ -34,7 +34,7 @@
 
   /** SVG */
   /* -- Dark Theme (dt) -- */
-  --theme_text: #b0007e;
+  --theme_text: #FFF;
   --theme_arrow: #000;
   --theme_blur_arrow: #FFF;
   --theme_stroke_arrow: #FFF;
